--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <button class="calc-button">
                     &larr;
                 </button>
-                <button clas="calc-button">
+                <button class="calc-button">
                     &divide;
                 </button>
             </div>
@@ -82,8 +82,6 @@
                     &equals;
                 </button>
             </div>
-
-
         </section>
     </div>
 
