--- a/index.html
+++ b/index.html
@@ -18,67 +18,67 @@
         <!-- Buttons -->
         <section class="calc-buttons">
             <div class="calc-button-row">
-                <button class="calc-button double" onclick="playClickSymbol()">
+                <button class="calc-button double">
                     C
                 </button>
-                <button class="calc-button" onclick="playClickSymbol()">
+                <button class="calc-button">
                     &larr;
                 </button>
-                <button class="calc-button" onclick="playClickSymbol()">
+                <button class="calc-button">
                     &divide;
                 </button>
             </div>
 
             <div class="calc-button-row">
-                <button class="calc-button" onclick="playClickNum()">
+                <button class="calc-button">
                     7
                 </button>
-                <button class="calc-button" onclick="playClickNum()">
+                <button class="calc-button">
                     8
                 </button>
-                <button class="calc-button" onclick="playClickNum()">
+                <button class="calc-button">
                     9
                 </button>
-                <button class="calc-button" onclick="playClickSymbol()">
+                <button class="calc-button">
                     &times;
                 </button>
             </div>
 
             <div class="calc-button-row">
-                <button class="calc-button" onclick="playClickNum()">
+                <button class="calc-button">
                     4
                 </button>
-                <button class="calc-button" onclick="playClickNum()">
+                <button class="calc-button">
                     5
                 </button>
-                <button class="calc-button" onclick="playClickNum()">
+                <button class="calc-button">
                     6
                 </button>
-                <button class="calc-button" onclick="playClickSymbol()">
+                <button class="calc-button">
                     &minus;
                 </button>
             </div>
 
             <div class="calc-button-row">
-                <button class="calc-button" onclick="playClickNum()">
+                <button class="calc-button">
                     1
                 </button>
-                <button class="calc-button" onclick="playClickNum()">
+                <button class="calc-button">
                     2
                 </button>
-                <button class="calc-button" onclick="playClickNum()">
+                <button class="calc-button">
                     3
                 </button>
-                <button class="calc-button" onclick="playClickSymbol()">
+                <button class="calc-button">
                     &plus;
                 </button>
             </div>
 
             <div class="calc-button-row">
-                <button class="calc-button triple" onclick="playClickNum()">
+                <button class="calc-button triple">
                     0
                 </button>
-                <button class="calc-button" onclick="playClickSymbol()">
+                <button class="calc-button">
                     &equals;
                 </button>
             </div>
